# ui-screenshot-to-prompt

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
src/bolt-prompt-generator/: __init__.py  config.py  image_splitter.py  main.py
src/ui-screenshot-to-prompt/: config.py  detect_components.py  image_splitter.py  main.py
src/ui_screenshot_to_prompt/: __init__.py  app.py  clients.py  config.py  detection.py  main.py  pipeline.py  vision.py
tests/: test_config.py  test_detection.py
