[tool.poetry]
name = "ui-screenshot-to-prompt"
version = "0.1.0"
description = "ui-screenshot-to-prompt"
authors = ["Stijn Smits"]
readme = "README.md"
packages = [{include = "src/ui-screenshot-to-prompt"}]

[tool.poetry.dependencies]
python = "^3.10"
opencv-python = "^4.10.0.84"
numpy = "^2.1.2"
pillow = "*"
scikit-learn = "*"
tqdm = "*"
python-dotenv = "^1.0.1"
anthropic = "^0.37.1"
scikit-image = "^0.24.0"
openai = "^1.52.2"
pytesseract = "^0.3.13"
gradio = "^5.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
